# clidict

./: CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.in  doc.conf
src/: clidict.hpp
tests/: CMakeLists.txt  test.cpp
